Fix mobile text off screen issue

--- a/style.scss
+++ b/style.scss
@@ -67,13 +67,13 @@ img {
 .text {
     position: absolute;
     top: 12%;
-    left: calc((100% - 767px) / 4);
+    left: calc((100% - 767px - 2em) / 2);
     text-align: left;
     max-width: 767px;
     padding: 1em;
     @media only screen and (max-width: 768px) {
         max-width: 90%;
-        left: calc((10%-2em) / 4);
+        left: auto;
         margin: 0;
     }
     h2 {
